--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <p>helo world</p>
 WTF combien de temps pour mettre a jour 
+<input type="hidden" name="token" vlue="test" > 
 <body>
 </body>
 </html>
